# zero2prod

./: .editorconfig  Cargo.toml  config.yaml  sqlx-data.json
.github/workflows/: general.yml
migrations/: 20220318150330_create_subscriptions_table.sql
scripts/: init_db.sh
src/: config.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
