[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
rust-version = "1.59"
authors = ["Saadi Save"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4"
hyper = "0.14"
config = "0.12"
uuid = { version = "0.8.1", features = ["v4"] }
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
once_cell = "1"

# Old version, waiting for sqlx 0.6
# Using time because chrono has a segfault vulnerability
time = "0.2"

[dependencies.tracing-subscriber]
version = "0.3"
features = ["registry", "env-filter"]

[dependencies.tokio]
version = "1"
features = [
    "rt-multi-thread", "macros"
]

[dependencies.serde]
version = "1"
features = [
    "derive"
]

[dependencies.sqlx]
version = "0.5"
features = [
    "runtime-tokio-rustls", "macros", "postgres",
    "uuid", "time", "offline"
]

[dev-dependencies]
reqwest = "0.11"


[dev-dependencies.sqlx]
version = "0.5"
features = [
    "migrate"
]
