[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
rust-version = "1.59"
authors = ["Saadi Save"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = "0.4"
hyper = "0.14"
config = "0.12"
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
once_cell = "1"
tower = "0.4"

# Old version, waiting for sqlx 0.6
# Using time because chrono has a segfault vulnerability
time = "0.2"

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.sqlx]
version = "0.5"
features = [
    "runtime-tokio-rustls", "macros", "postgres",
    "uuid", "time", "offline"
]

[dependencies.uuid]
version = "0.8"
features = ["v4"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["registry", "env-filter"]

[dependencies.secrecy]
version = "0.8"
features = ["serde"]

[dependencies.tower-http]
version = "0.2"
features = ["trace", "request-id"]

[dev-dependencies]
reqwest = "0.11"


[dev-dependencies.sqlx]
version = "0.5"
features = ["migrate"]
