[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
rust-version = "1.59"
authors = ["Saadi Save"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = "0.7.3"
hyper = "1.1.0"
config = "0.13.4"
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2.0"
once_cell = "1"
tower = "0.4"

chrono = { version = "0.4.31", default-features = false, features = ["clock"] }

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.sqlx]
version = "0.7.3"
features = [
    "runtime-tokio-rustls", "macros", "postgres",
    "uuid", "chrono"
]

[dependencies.uuid]
version = "1.6.1"
features = ["v4"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["registry", "env-filter"]

[dependencies.secrecy]
version = "0.8"
features = ["serde"]

[dependencies.tower-http]
version = "0.5.0"
features = ["trace", "request-id", "util"]

[dev-dependencies]
reqwest = "0.11"


[dev-dependencies.sqlx]
version = "0.7.3"
features = ["migrate"]
